feat: added jest to project feat: created new endpoint and service of getting recommended posts for user
